# Eye-detection-attendance-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attendance.csv  eye detection.cpp  main.cpp
